# rust_chatbot

./: Cargo.toml  rules_with_patterns.json  ruleswith_refined_intents_and_grammar.json
src/: main.rs
