
[package]
name = "rust_chatbot"
version = "0.1.0"
edition = "2021"
# Optional metadata for better project documentation
# authors = ["Your Name <you@example.com>"]
# description = "A Rust-based chatbot with intent-response capabilities."
# license = "MIT"

[dependencies]
# Logging libraries for debugging and monitoring
log = "0.4"
env_logger = "0.9"

# Serde for serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Chrono for date and time handling
chrono = "0.4"

# Optional: Additional dependencies for extended functionalities
# notify = "5.0"      # For watching file changes (e.g., dynamic rule reloading)
# tokio = { version = "1.0", features = ["full"] } # For asynchronous runtime

[dev-dependencies]
# For unit testing
assert_cmd = "2.0"
